fix(dynamic-label): don't truncate the label
This is important specially because this component is
used to visualize the readonly state of the boolean elements
(checkbox and switch) which don't truncate their text by deafult

--- a/src/components/dynamic-label/dynamic-label.scss
+++ b/src/components/dynamic-label/dynamic-label.scss
@@ -1,5 +1,3 @@
-@use '../../style/mixins.scss';
-
 * {
     box-sizing: border-box;
     min-width: 0;
@@ -25,7 +23,6 @@ limel-icon {
 }
 
 span {
-    @include mixins.truncate-text;
     flex-grow: 1;
     font-size: 0.8125rem; // `13px`, Like Checkbox & Switch
     color: var(--mdc-theme-on-surface);
